crates/jfm-cli/tests/snapshots/flow_demo__flow_delete_users_by_id_renders_expected_markdown.snap
---
source: tests/flow_demo.rs
expression: stdout
---
# DELETE /users/{id}

**Controller**: `com.example.demo.controller.UserController#delete(Long)`
**File**: `demo-api/demo/src/main/java/com/example/demo/controller/UserController.java:LINE`

## Call sequence

- `UserController#delete(Long)`
  - `UserService#delete(Long)` *[resolved]*
    - `UserService#findUserOrThrow(Long)` *[resolved]*
      - `Optional#orElseThrow(Supplier)` *[control - Optional]*
        - inputs:
          - `UserRepository#findById(Long)` *[external - Spring Data JPA]*
        - optional present:
        - optional empty: *(terminates)*
          - lambda `() -> new BusinessException(ErrorCode.USER_NOT_FOUND)`:
            - `BusinessException#<init>(ErrorCode)` *[resolved]*
              - `ErrorCode#getDefaultMessage()` *[resolved]*
    - if Boolean.TRUE.equals(user.getActive()): *(terminates)*
      - condition:
        - `User#getActive()` *[resolved]*
      - `BusinessException#<init>(ErrorCode)` *(see above)*
    - `UserRepository#delete(User)` *[external - Spring Data JPA]*

## Inputs

- `id: Long` *(path variable)*

## Unresolved / external

- `UserRepository#delete(User)` - `external` (Spring Data JPA)
- `UserRepository#findById(Long)` - `external` (Spring Data JPA)

## Notes

- Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
- Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
- Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
- AOP, @Transactional, @ControllerAdvice, DI qualifiers, Lombok, and Bean Validation are not modeled.
- Repeated subtrees elided after first appearance (see above).
