crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_active_renders_expected_json.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
{
  "endpoint": {
    "verb": "GET",
    "path": "/users/active"
  },
  "controller": {
    "method": "com.example.demo.controller.UserController#findActive()",
    "file": "demo-api/demo/src/main/java/com/example/demo/controller/UserController.java",
    "line": LINE
  },
  "inputs": [],
  "call_sequence": [
    {
      "type": "call",
      "method": "com.example.demo.service.UserService#findActive()",
      "confidence": "resolved",
      "calls": [
        {
          "type": "call",
          "method": "com.example.demo.repository.UserRepository#findAll()",
          "confidence": "external",
          "external_kind": "spring-data",
          "calls": []
        },
        {
          "type": "call",
          "method": "ArrayList#<init>()",
          "confidence": "external",
          "external_kind": "jdk-library",
          "calls": []
        },
        {
          "type": "loop",
          "kind": "enhanced_for",
          "source": "User user : users",
          "execution": "0..n",
          "init": [],
          "condition": [],
          "arms": [
            {
              "label": "body",
              "children": [
                {
                  "type": "branch",
                  "kind": "if",
                  "condition_src": "Boolean.TRUE.equals(user.getActive())",
                  "condition": [
                    {
                      "type": "call",
                      "method": "Boolean#equals(_)",
                      "confidence": "external",
                      "external_kind": "jdk-library",
                      "inputs": [
                        {
                          "type": "call",
                          "method": "com.example.demo.entity.User#getActive()",
                          "confidence": "resolved",
                          "calls": []
                        }
                      ],
                      "calls": []
                    }
                  ],
                  "arms": [
                    {
                      "label": "then",
                      "terminates": false,
                      "children": [
                        {
                          "type": "call",
                          "method": "List#add(_)",
                          "confidence": "external",
                          "external_kind": "jdk-library",
                          "inputs": [
                            {
                              "type": "call",
                              "method": "com.example.demo.service.UserService#toResponse(User)",
                              "confidence": "resolved",
                              "scope": "intra-class",
                              "calls": [
                                {
                                  "type": "call",
                                  "method": "com.example.demo.dto.UserResponse#<init>(Long, String, String, Integer, Boolean)",
                                  "confidence": "resolved",
                                  "inputs": [
                                    {
                                      "type": "call",
                                      "method": "com.example.demo.entity.User#getId()",
                                      "confidence": "resolved",
                                      "calls": []
                                    },
                                    {
                                      "type": "call",
                                      "method": "com.example.demo.entity.User#getName()",
                                      "confidence": "resolved",
                                      "calls": []
                                    },
                                    {
                                      "type": "call",
                                      "method": "com.example.demo.entity.User#getEmail()",
                                      "confidence": "resolved",
                                      "calls": []
                                    },
                                    {
                                      "type": "call",
                                      "method": "com.example.demo.entity.User#getAge()",
                                      "confidence": "resolved",
                                      "calls": []
                                    },
                                    {
                                      "type": "call",
                                      "method": "com.example.demo.entity.User#getActive()",
                                      "confidence": "resolved",
                                      "calls": []
                                    }
                                  ],
                                  "calls": []
                                }
                              ]
                            }
                          ],
                          "calls": []
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ],
          "update": []
        },
        {
          "type": "call",
          "method": "List#forEach(Consumer)",
          "confidence": "control",
          "control_kind": "traversal",
          "calls": [
            {
              "type": "loop",
              "kind": "for_each",
              "source": "List.forEach",
              "execution": "0..n",
              "init": [],
              "condition": [],
              "arms": [
                {
                  "label": "body",
                  "children": [
                    {
                      "type": "lambda",
                      "kind": "method_ref",
                      "source": "this::requireResponseEmail",
                      "children": [
                        {
                          "type": "call",
                          "method": "com.example.demo.service.UserService#requireResponseEmail(UserResponse)",
                          "confidence": "resolved",
                          "scope": "intra-class",
                          "calls": [
                            {
                              "type": "branch",
                              "kind": "if",
                              "condition_src": "response.getEmail() == null",
                              "condition": [
                                {
                                  "type": "call",
                                  "method": "com.example.demo.dto.UserResponse#getEmail()",
                                  "confidence": "resolved",
                                  "calls": []
                                }
                              ],
                              "arms": [
                                {
                                  "label": "then",
                                  "terminates": true,
                                  "children": [
                                    {
                                      "type": "call",
                                      "method": "IllegalStateException#<init>(_)",
                                      "confidence": "external",
                                      "external_kind": "jdk-library",
                                      "calls": []
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ],
              "update": []
            }
          ]
        }
      ]
    }
  ],
  "unresolved": [],
  "notes": [
    "Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.",
    "Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.",
    "Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.",
    "AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled."
  ]
}
