crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_active_renders_expected_markdown.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
# GET /users/active

**Controller**: `com.example.demo.controller.UserController#findActive()`
**File**: `demo-api/demo/src/main/java/com/example/demo/controller/UserController.java:LINE`

## Call sequence

- `UserController#findActive()`
  - `UserService#findActive()` *[resolved]*
    - `UserRepository#findAll()` *[external - Spring Data JPA]*
    - loop for-each `User user : users`: *(may execute 0..n times)*
      - body:
        - if Boolean.TRUE.equals(user.getActive()):
          - condition:
            - `User#getActive()` *[resolved]*
          - `UserService#toResponse(User)` *[resolved]*
            - `UserResponse#<init>(Long, String, String, Integer, Boolean)` *[resolved]*
              - inputs:
                - `User#getId()` *[resolved]*
                - `User#getName()` *[resolved]*
                - `User#getEmail()` *[resolved]*
                - `User#getAge()` *[resolved]*
                - `User#getActive()` *[resolved]*
    - `List#forEach(Consumer)` *[control - traversal]*
      - loop forEach `List.forEach`: *(may execute 0..n times)*
        - body:
          - method ref `this::requireResponseEmail`:
            - `UserService#requireResponseEmail(UserResponse)` *[resolved]*
              - if response.getEmail() == null: *(terminates)*
                - condition:
                  - `UserResponse#getEmail()` *[resolved]*

## Inputs

- None

## Unresolved / external

- `UserRepository#findAll()` - `external` (Spring Data JPA)

## Notes

- Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
- Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
- Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
- AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
