crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_active_renders_expected_mermaid.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
```mermaid
sequenceDiagram
    participant UserController
    participant UserService
    participant UserRepository
    participant User
    participant UserResponse
    participant List
    UserController->>UserService: findActive()
    UserService->>UserRepository: findAll()
    Note over UserRepository: external (Spring Data JPA)
    loop for-each User user : users (0..n)
    UserService->>User: getActive()
    alt Boolean.TRUE.equals(user.getActive())
    UserService->>UserService: toResponse(User)
    UserService->>User: getId()
    UserService->>User: getName()
    UserService->>User: getEmail()
    UserService->>User: getAge()
    UserService->>User: getActive()
    UserService->>UserResponse: <init>(...)
    end
    end
    UserService->>List: forEach(Consumer)
    Note over List: control flow (traversal)
    loop forEach List.forEach (0..n)
    List->>UserService: requireResponseEmail(UserResponse)
    UserService->>UserResponse: getEmail()
    alt response.getEmail() == null
    Note over UserService: terminates
    end
    end
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
    %% - Return arrows are not rendered: CallNode does not yet track return types.
```
