crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_active_with_max_depth_2_renders_truncated_mermaid_flowchart.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
```mermaid
flowchart TD
    n0[["UserController#findActive()"]]
    n1[["UserService#findActive()"]]
    n0 --> n1
    n2(["UserRepository#findAll() - external (Spring Data JPA)"])
    n1 --> n2
    n3{{"loop for-each User user : users (0..n)"}}
    n2 --> n3
    n4{"if Boolean.TRUE.equals(user.getActive())"}
    n3 -->|"body"| n4
    n5[["User#getActive()"]]
    n4 -->|"condition"| n5
    n6[["UserService#toResponse(User)"]]
    n4 -->|"then"| n6
    n7["(truncated, 2 more levels)"]
    n6 --> n7
    n6 -->|"next"| n3
    n4 -->|"next"| n3
    n8{{"List#forEach(Consumer) - control flow (traversal)"}}
    n3 --> n8
    n9["(truncated, 2 more levels)"]
    n8 --> n9
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
    %% - Output truncated at depth 2 (see --max-depth).
```
