crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_by_id_renders_expected_markdown.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
# GET /users/{id}

**Controller**: `com.example.demo.controller.UserController#findById(Long)`
**File**: `demo-api/demo/src/main/java/com/example/demo/controller/UserController.java:LINE`

## Call sequence

- `UserController#findById(Long)`
  - `UserService#findById(Long)` *[resolved]*
    - `UserService#findUserOrThrow(Long)` *[resolved]*
      - `Optional#orElseThrow(Supplier)` *[control - Optional]*
        - inputs:
          - `UserRepository#findById(Long)` *[external - Spring Data JPA]*
        - optional present:
        - optional empty: *(terminates)*
          - lambda `() -> new BusinessException(ErrorCode.USER_NOT_FOUND)`:
            - `BusinessException#<init>(ErrorCode)` *[resolved]*
              - `ErrorCode#getDefaultMessage()` *[resolved]*
    - `UserService#toResponse(User)` *[resolved]*
      - `UserResponse#<init>(Long, String, String, Integer, Boolean)` *[resolved]*
        - inputs:
          - `User#getId()` *[resolved]*
          - `User#getName()` *[resolved]*
          - `User#getEmail()` *[resolved]*
          - `User#getAge()` *[resolved]*
          - `User#getActive()` *[resolved]*

## Inputs

- `id: Long` *(path variable)*

## Unresolved / external

- `UserRepository#findById(Long)` - `external` (Spring Data JPA)

## Notes

- Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
- Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
- Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
- AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
