crates/jfm-cli/tests/snapshots/flow_demo__flow_get_users_by_id_renders_expected_mermaid.snap
---
source: crates/jfm-cli/tests/flow_demo.rs
expression: stdout
---
```mermaid
sequenceDiagram
    participant UserController
    participant UserService
    participant Optional
    participant UserRepository
    participant BusinessException
    participant ErrorCode
    participant UserResponse
    participant User
    UserController->>UserService: findById(Long)
    UserService->>UserService: findUserOrThrow(Long)
    UserService->>UserRepository: findById(Long)
    Note over UserRepository: external (Spring Data JPA)
    UserService->>Optional: orElseThrow(Supplier)
    Note over Optional: control flow (Optional)
    alt optional present
    Note over Optional: no rendered calls
    else optional empty
    Optional->>BusinessException: <init>(...)
    BusinessException->>ErrorCode: getDefaultMessage()
    end
    UserService->>UserService: toResponse(User)
    UserService->>User: getId()
    UserService->>User: getName()
    UserService->>User: getEmail()
    UserService->>User: getAge()
    UserService->>User: getActive()
    UserService->>UserResponse: <init>(...)
    %% Notes:
    %% - Stream, Optional, and common JDK chain operators use a small hardcoded return-shape table; this is not a general type inferencer.
    %% - Optional.orElseThrow return type is flattened to Object; generic-aware unwrapping is intentionally deferred.
    %% - Optional present/empty behavior is rendered structurally, but JFM does not predict which arm runs for a request.
    %% - AOP, @Transactional, @ControllerAdvice, DI qualifiers, and Lombok are not modeled.
    %% - Return arrows are not rendered: CallNode does not yet track return types.
```
